examples/test/testpolicy5018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5018
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key27: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value15
          key14: value28
      podSelector:
        matchLabels:
          key14: value5
          key39: value36
